# strictaccess

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: api.md  index.md
examples/: example_access_decorators.py  example_basic.py  example_debug_mode.py
src/strictaccess/: __init__.py  access_tags.py  core.py  decorators.py  exceptions.py
strictaccess/: __init__.py  core.py  decorators.py
strictaccess.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_access_control.py  test_debug_mode.py
