[metadata]
name = strictaccess
version = attr: strictaccess._version.__version__
description = Enforces strict access control for Python classes.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jhoel Peralta
author_email = jhoelperaltap@gmail.com
url = https://github.com/jhoelperaltap/strictaccess
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = access control, python, strict

[options]
packages = find:
python_requires = >=3.7
install_requires =

[options.extras_require]
dev =
    pytest
    pytest-cov
    flake8
    black

[options.packages.find]
where = src